https session on progress ..
next time will be https client

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,7 +83,9 @@
     "functional": "cpp",
     "iterator": "cpp",
     "utility": "cpp",
-    "coroutine": "cpp"
+    "coroutine": "cpp",
+    "__availability": "cpp",
+    "semaphore": "cpp"
   },
   "C_Cpp.errorSquiggles": "Disabled"
 }
